--- a/frontend/index.html
+++ b/frontend/index.html
@@ -46,6 +46,8 @@
   </div>
 
   <script>
+
+    console.log("API_BASE is:", API_BASE);
     const formTitle = document.getElementById("form-title");
     const submitText = document.getElementById("submit-text");
     const toggleText = document.getElementById("toggle-text");
