--- a/frontend/index.html
+++ b/frontend/index.html
@@ -44,9 +44,8 @@
     </p>
   </div>
 
-  <script src="config.js"></script>
   <script>
-
+    const API_BASE = "/api";
     console.log("API_BASE is:", API_BASE);
     const formTitle = document.getElementById("form-title");
     const submitText = document.getElementById("submit-text");
