--- a/frontend/teacher-refs.html
+++ b/frontend/teacher-refs.html
@@ -112,32 +112,37 @@
         const card = document.createElement("div");
         card.className = "p-6 border rounded-xl bg-gray-50 space-y-2";
 
-        const safeVideoURL = ref.video_url.startsWith("http")
-          ? ref.video_url
-          : `${API_BASE}${ref.video_url}`;
+        const safeVideoURL = ref.video_url?.startsWith("http")
+  ? ref.video_url
+  : `${API_BASE}${ref.video_url || ""}`;
 
-        card.innerHTML = `
-          <div class="font-bold text-blue-800">Student: ${ref.email}</div>
-          <div class="text-sm text-gray-600">Chapter: ${chapterMap[ref.chapter_id] || "Chapter " + ref.chapter_id}</div>
-          <div class="aspect-w-16 aspect-h-9">
-            <video controls class="w-full rounded-lg">
-              <source src="${safeVideoURL}" type="video/mp4">
-              Your browser does not support the video tag.
-            </video>
-          </div>
-          <p class="text-gray-800 mt-2">${ref.text_summary || "(No summary)"}</p>
-          <div class="text-xs text-gray-400">Submitted: ${new Date(ref.submitted_at).toLocaleString()}</div>
+card.innerHTML = `
+  <div class="font-bold text-blue-800">Student: ${ref.email}</div>
+  <div class="text-sm text-gray-600">Chapter: ${chapterMap[ref.chapter_id] || "Chapter " + ref.chapter_id}</div>
+  <div class="mt-2">
+    ${
+      safeVideoURL
+        ? `<video controls class="w-full rounded-lg">
+             <source src="${safeVideoURL}" type="video/mp4">
+             Your browser does not support the video tag.
+           </video>`
+        : `<p class="text-red-500">No video available.</p>`
+    }
+  </div>
+  <p class="text-gray-800 mt-2">${ref.text_summary || "(No summary)"}</p>
+  <div class="text-xs text-gray-400">Submitted: ${new Date(ref.submitted_at).toLocaleString()}</div>
 
-          <form class="feedback-form space-y-2 mt-4">
-            <label class="block text-sm font-medium text-gray-700">Feedback</label>
-            <select class="status w-full border px-3 py-2 rounded-lg">
-              <option value="understood" ${ref.status === "understood" ? "selected" : ""}>Understood</option>
-              <option value="needs_review" ${ref.status === "needs_review" ? "selected" : ""}>Needs Review</option>
-            </select>
-            <textarea class="comment w-full border px-3 py-2 rounded-lg" rows="2" placeholder="Comment (optional)">${ref.comment || ""}</textarea>
-            <button type="submit" class="bg-green-600 text-white px-4 py-2 rounded hover:bg-green-700">Submit Feedback</button>
-          </form>
-        `;
+  <form class="feedback-form space-y-2 mt-4">
+    <label class="block text-sm font-medium text-gray-700">Feedback</label>
+    <select class="status w-full border px-3 py-2 rounded-lg">
+      <option value="understood" ${ref.status === "understood" ? "selected" : ""}>Understood</option>
+      <option value="needs_review" ${ref.status === "needs_review" ? "selected" : ""}>Needs Review</option>
+    </select>
+    <textarea class="comment w-full border px-3 py-2 rounded-lg" rows="2" placeholder="Comment (optional)">${ref.comment || ""}</textarea>
+    <button type="submit" class="bg-green-600 text-white px-4 py-2 rounded hover:bg-green-700">Submit Feedback</button>
+  </form>
+`;
+
 
         const form = card.querySelector(".feedback-form");
         const commentInput = form.querySelector(".comment");
