--- a/frontend/submit.html
+++ b/frontend/submit.html
@@ -7,6 +7,14 @@
   <title>Submit Reflection</title>
 </head>
 <body class="bg-gray-100 min-h-screen flex items-center justify-center">
+<div class="fixed top-4 left-4 space-x-2 z-50">
+  <a href="dashboard.html" class="bg-blue-600 text-white px-4 py-2 rounded hover:bg-blue-700 shadow">
+    Dashboard
+  </a>
+  <button onclick="history.back()" class="bg-gray-500 text-white px-4 py-2 rounded hover:bg-gray-600 shadow">
+    Back
+  </button>
+</div>
 
   <div class="bg-white p-8 rounded-xl shadow-md w-full max-w-md space-y-6">
     <h2 class="text-2xl font-bold text-gray-800 text-center">Submit Reflection</h2>
