--- a/frontend/teacher-refs.html
+++ b/frontend/teacher-refs.html
@@ -7,6 +7,15 @@
   <script src="config.js"></script>
 </head>
 <body class="bg-gray-100 min-h-screen p-6">
+  <div class="fixed top-4 left-4 space-x-2 z-50">
+  <a href="dashboard.html" class="bg-blue-600 text-white px-4 py-2 rounded hover:bg-blue-700 shadow">
+    Dashboard
+  </a>
+  <button onclick="history.back()" class="bg-gray-500 text-white px-4 py-2 rounded hover:bg-gray-600 shadow">
+    Back
+  </button>
+</div>
+
   <div class="max-w-5xl mx-auto bg-white p-6 rounded-xl shadow space-y-6">
     <h1 class="text-2xl font-bold text-center">Teacher Dashboard – All Reflections</h1>
 
