--- a/frontend/curriculum.html
+++ b/frontend/curriculum.html
@@ -7,20 +7,24 @@
   <title>Curriculum</title>
 </head>
 <body class="bg-gray-100 min-h-screen p-6">
+
+  <!-- Navigation -->
   <div class="fixed top-4 left-4 space-x-2 z-50">
-  <a href="dashboard.html" class="bg-blue-600 text-white px-4 py-2 rounded hover:bg-blue-700 shadow">
-    Dashboard
-  </a>
-  <button onclick="history.back()" class="bg-gray-500 text-white px-4 py-2 rounded hover:bg-gray-600 shadow">
-    Back
-  </button>
-</div>
+    <a href="dashboard.html" class="bg-blue-600 text-white px-4 py-2 rounded hover:bg-blue-700 shadow">
+      Dashboard
+    </a>
+    <button onclick="history.back()" class="bg-gray-500 text-white px-4 py-2 rounded hover:bg-gray-600 shadow">
+      Back
+    </button>
+  </div>
+
+  <!-- Main Container -->
   <div class="max-w-5xl mx-auto space-y-8">
 
+    <!-- Subject Section -->
     <div class="bg-white p-6 rounded-xl shadow space-y-4">
       <h2 class="text-2xl font-bold text-gray-800">Subjects</h2>
 
-      <!-- For teachers: Add Subject -->
       <div id="add-subject-form" class="hidden space-x-2">
         <input id="new-subject" placeholder="New Subject Name" class="px-4 py-2 border rounded w-64" />
         <button onclick="addSubject()" class="bg-green-600 text-white px-4 py-2 rounded hover:bg-green-700">Add Subject</button>
@@ -29,10 +33,10 @@
       <ul id="subject-list" class="space-y-2"></ul>
     </div>
 
+    <!-- Chapter Section -->
     <div class="bg-white p-6 rounded-xl shadow space-y-4">
       <h2 class="text-2xl font-bold text-gray-800">Chapters</h2>
 
-      <!-- For teachers: Add Chapter -->
       <div id="add-chapter-form" class="hidden space-x-2">
         <input id="new-chapter" placeholder="New Chapter Title" class="px-4 py-2 border rounded w-64" />
         <button onclick="addChapter()" class="bg-green-600 text-white px-4 py-2 rounded hover:bg-green-700">Add Chapter</button>
@@ -49,6 +53,7 @@
 
     let userRole = null;
     let currentSubjectId = null;
+    let currentSubjectObsolete = false;
 
     async function fetchUser() {
       const res = await fetch(`${API_BASE}/me`, {
@@ -82,9 +87,16 @@
       subjects.forEach(subject => {
         const li = document.createElement("li");
         li.className = "flex items-center justify-between bg-gray-100 p-2 rounded";
+
+        const label = subject.obsolete ? '<span class="text-red-500 text-sm ml-2">(Obsolete)</span>' : '';
+        const lineClass = subject.obsolete ? 'text-gray-400 line-through' : '';
+
         li.innerHTML = `
-          <span class="cursor-pointer font-medium" onclick="selectSubject(${subject.id}, '${subject.name}')">${subject.name}</span>
-          ${userRole === 'teacher' ? `
+          <span class="cursor-pointer font-medium ${lineClass}" 
+                onclick="selectSubject(${subject.id}, '${subject.name}', ${subject.obsolete})">
+            ${subject.name} ${label}
+          </span>
+          ${userRole === 'teacher' && !subject.obsolete ? `
             <div class="space-x-2">
               <button onclick="editSubject(${subject.id}, '${subject.name}')" class="text-yellow-600 hover:underline">Edit</button>
               <button onclick="deleteSubject(${subject.id})" class="text-red-600 hover:underline">Delete</button>
@@ -94,9 +106,17 @@
       });
     }
 
-    async function selectSubject(id, name) {
+    function selectSubject(id, name, isObsolete) {
       currentSubjectId = id;
-      document.getElementById("add-chapter-form").classList.toggle("hidden", userRole !== "teacher");
+      currentSubjectObsolete = isObsolete;
+
+      const addForm = document.getElementById("add-chapter-form");
+      if (userRole === "teacher" && !isObsolete) {
+        addForm.classList.remove("hidden");
+      } else {
+        addForm.classList.add("hidden");
+      }
+
       fetchChapters(id);
     }
 
@@ -110,11 +130,16 @@
       container.innerHTML = "";
 
       chapters.forEach(chapter => {
+        const isObsolete = chapter.obsolete;
+        const label = isObsolete ? '<span class="text-red-500 text-sm ml-2">(Obsolete)</span>' : '';
+        const lineClass = isObsolete ? 'text-gray-400 line-through' : '';
+
         const li = document.createElement("li");
         li.className = "flex items-center justify-between bg-gray-50 p-2 rounded";
+
         li.innerHTML = `
-          <span>${chapter.title}</span>
-          ${userRole === 'teacher' ? `
+          <span class="${lineClass}">${chapter.title} ${label}</span>
+          ${userRole === 'teacher' && !isObsolete ? `
             <div class="space-x-2">
               <button onclick="editChapter(${chapter.id}, '${chapter.title}')" class="text-yellow-600 hover:underline">Edit</button>
               <button onclick="deleteChapter(${chapter.id})" class="text-red-600 hover:underline">Delete</button>
