--- a/frontend/index.html
+++ b/frontend/index.html
@@ -61,7 +61,6 @@
       toggleButton.textContent = isLogin ? "Sign up" : "Login";
       signupFields.classList.toggle("hidden", isLogin);
 
-      // Manage required fields
       const nameField = document.querySelector("input[name='name']");
       const confirmField = document.querySelector("input[name='confirm_password']");
 
@@ -81,20 +80,25 @@
       const email = form.email.value.trim();
       const password = form.password.value;
 
-      // Basic email validation
       if (!/^\S+@\S+\.\S+$/.test(email)) {
         alert("Please enter a valid email address.");
         return;
       }
 
-      if (password.length < 6) {
-        alert("Password must be at least 6 characters.");
+      const strongPassword =
+        /[A-Z]/.test(password) &&
+        /[a-z]/.test(password) &&
+        /\d/.test(password) &&
+        /[!@#$%^&*(),.?\":{}|<>]/.test(password);
+
+      if (password.length < 8 || !strongPassword) {
+        alert("Password must be at least 8 characters and include uppercase, lowercase, number, and special character.");
         return;
       }
 
       if (!isLogin) {
         const name = form.name.value.trim();
-        const role = "teacher"; // 🔒 force teacher role
+        const role = "teacher";
         const confirm = form.confirm_password.value;
 
         if (password !== confirm) {
@@ -131,13 +135,12 @@
           localStorage.setItem("token", data.access_token);
           alert("Login successful!");
 
-          // Fetch user role
           const userRes = await fetch(`${API_BASE}/me`, {
             headers: { Authorization: `Bearer ${data.access_token}` }
           });
           const userInfo = await userRes.json();
 
-          window.location.href = "dashboard.html"; // you can redirect based on userInfo.role
+          window.location.href = "dashboard.html";
         } else {
           const errorData = await res.json().catch(() => ({}));
           alert(errorData.detail || "Login failed.");
