--- a/frontend/curriculum.html
+++ b/frontend/curriculum.html
@@ -25,6 +25,14 @@
     <div class="bg-white p-6 rounded-xl shadow space-y-4">
       <h2 class="text-2xl font-bold text-gray-800">Subjects</h2>
 
+      <!-- Subject Dropdown -->
+      <div class="space-y-2">
+        <label for="subject-select" class="block text-sm font-medium text-gray-700">Select a Subject</label>
+        <select id="subject-select" onchange="onSubjectChange()" class="w-full px-4 py-2 border rounded">
+          <option value="">Loading...</option>
+        </select>
+      </div>
+
       <div id="add-subject-form" class="hidden space-x-2">
         <input id="new-subject" placeholder="New Subject Name" class="px-4 py-2 border rounded w-64" />
         <button onclick="addSubject()" class="bg-green-600 text-white px-4 py-2 rounded hover:bg-green-700">Add Subject</button>
@@ -46,6 +54,7 @@
     </div>
 
   </div>
+
 <script>
   const token = localStorage.getItem("token");
   if (!token) window.location.href = "login.html";
@@ -87,8 +96,7 @@
     subjects.forEach((subject) => {
       const option = document.createElement("option");
       option.value = subject.id;
-      option.textContent = subject.name + (subject.obsolete ? " (Obsolete)" : "");
-      if (subject.obsolete) option.disabled = true;
+      option.textContent = subject.name;
       select.appendChild(option);
     });
   }
@@ -97,10 +105,9 @@
     const select = document.getElementById("subject-select");
     const selectedId = select.value;
     currentSubjectId = selectedId || null;
-    currentSubjectObsolete = select.options[select.selectedIndex]?.textContent.includes("Obsolete");
 
     const chapterForm = document.getElementById("add-chapter-form");
-    if (userRole === "teacher" && currentSubjectId && !currentSubjectObsolete) {
+    if (userRole === "teacher" && currentSubjectId) {
       chapterForm.classList.remove("hidden");
     } else {
       chapterForm.classList.add("hidden");
@@ -120,16 +127,13 @@
     container.innerHTML = "";
 
     chapters.forEach((chapter) => {
-      const isObsolete = chapter.obsolete;
       const li = document.createElement("li");
       li.className = "flex items-center justify-between bg-gray-50 p-2 rounded";
 
       li.innerHTML = `
-        <span class="${isObsolete ? 'text-gray-400 line-through' : ''}">
-          ${chapter.title}${isObsolete ? ' <span class="text-red-500 text-sm">(Obsolete)</span>' : ''}
-        </span>
+        <span>${chapter.title}</span>
         ${
-          userRole === "teacher" && !isObsolete
+          userRole === "teacher"
             ? `<div class="space-x-2">
                 <button onclick="editChapter(${chapter.id}, '${chapter.title}')" class="text-yellow-600 hover:underline">Edit</button>
                 <button onclick="deleteChapter(${chapter.id})" class="text-red-600 hover:underline">Delete</button>
