--- a/frontend/curriculum.html
+++ b/frontend/curriculum.html
@@ -25,7 +25,6 @@
     <div class="bg-white p-6 rounded-xl shadow space-y-4">
       <h2 class="text-2xl font-bold text-gray-800">Subjects</h2>
 
-      <!-- Subject Dropdown -->
       <div class="space-y-2">
         <label for="subject-select" class="block text-sm font-medium text-gray-700">Select a Subject</label>
         <select id="subject-select" onchange="onSubjectChange()" class="w-full px-4 py-2 border rounded">
@@ -33,7 +32,7 @@
         </select>
       </div>
 
-      <div id="add-subject-form" class="hidden space-x-2">
+      <div id="add-subject-form" class="space-x-2">
         <input id="new-subject" placeholder="New Subject Name" class="px-4 py-2 border rounded w-64" />
         <button onclick="addSubject()" class="bg-green-600 text-white px-4 py-2 rounded hover:bg-green-700">Add Subject</button>
       </div>
@@ -41,184 +40,199 @@
       <ul id="subject-list" class="space-y-2"></ul>
     </div>
 
-    <!-- Chapter Section -->
-    <div class="bg-white p-6 rounded-xl shadow space-y-4">
-      <h2 class="text-2xl font-bold text-gray-800">Chapters</h2>
-
-      <div id="add-chapter-form" class="hidden space-x-2">
-        <input id="new-chapter" placeholder="New Chapter Title" class="px-4 py-2 border rounded w-64" />
-        <button onclick="addChapter()" class="bg-green-600 text-white px-4 py-2 rounded hover:bg-green-700">Add Chapter</button>
-      </div>
-
-      <ul id="chapter-list" class="space-y-2"></ul>
-    </div>
-
   </div>
 
-<script>
-  const token = localStorage.getItem("token");
-  if (!token) window.location.href = "login.html";
+  <script>
+    const token = localStorage.getItem("token");
+    if (!token) window.location.href = "login.html";
 
-  let userRole = null;
-  let currentSubjectId = null;
-  let currentSubjectObsolete = false;
+    let userRole = null;
 
-  async function fetchUser() {
-    const res = await fetch(`${API_BASE}/me`, {
-      headers: { Authorization: `Bearer ${token}` }
-    });
+    async function fetchUser() {
+      const res = await fetch(`${API_BASE}/me`, {
+        headers: { Authorization: `Bearer ${token}` }
+      });
 
-    if (!res.ok) {
-      localStorage.removeItem("token");
-      window.location.href = "/";
-      return;
-    }
+      if (!res.ok) {
+        localStorage.removeItem("token");
+        window.location.href = "/";
+        return;
+      }
 
-    const user = await res.json();
-    userRole = user.role;
-
-    if (userRole === "teacher") {
-      document.getElementById("add-subject-form").classList.remove("hidden");
-    }
-
-    fetchSubjects();
-  }
-
-  async function fetchSubjects() {
-    const res = await fetch(`${API_BASE}/subjects`, {
-      headers: { Authorization: `Bearer ${token}` }
-    });
-
-    const subjects = await res.json();
-    const select = document.getElementById("subject-select");
-    select.innerHTML = '<option value="">Select a subject</option>';
-
-    subjects.forEach((subject) => {
-      const option = document.createElement("option");
-      option.value = subject.id;
-      option.textContent = subject.name;
-      select.appendChild(option);
-    });
-  }
-
-  function onSubjectChange() {
-    const select = document.getElementById("subject-select");
-    const selectedId = select.value;
-    currentSubjectId = selectedId || null;
-
-    const chapterForm = document.getElementById("add-chapter-form");
-    if (userRole === "teacher" && currentSubjectId) {
-      chapterForm.classList.remove("hidden");
-    } else {
-      chapterForm.classList.add("hidden");
-    }
-
-    if (currentSubjectId) fetchChapters(currentSubjectId);
-    else document.getElementById("chapter-list").innerHTML = "";
-  }
-
-  async function fetchChapters(subjectId) {
-    const res = await fetch(`${API_BASE}/subjects/${subjectId}/chapters`, {
-      headers: { Authorization: `Bearer ${token}` }
-    });
-
-    const chapters = await res.json();
-    const container = document.getElementById("chapter-list");
-    container.innerHTML = "";
-
-    chapters.forEach((chapter) => {
-      const li = document.createElement("li");
-      li.className = "flex items-center justify-between bg-gray-50 p-2 rounded";
-
-      li.innerHTML = `
-        <span>${chapter.title}</span>
-        ${
-          userRole === "teacher"
-            ? `<div class="space-x-2">
-                <button onclick="editChapter(${chapter.id}, '${chapter.title}')" class="text-yellow-600 hover:underline">Edit</button>
-                <button onclick="deleteChapter(${chapter.id})" class="text-red-600 hover:underline">Delete</button>
-              </div>`
-            : ""
-        }
-      `;
-      container.appendChild(li);
-    });
-  }
-
-  async function addSubject() {
-    const name = document.getElementById("new-subject").value.trim();
-    if (!name) return alert("Enter a subject name");
-
-    const res = await fetch(`${API_BASE}/subjects`, {
-      method: "POST",
-      headers: {
-        Authorization: `Bearer ${token}`,
-        "Content-Type": "application/json"
-      },
-      body: JSON.stringify({ name })
-    });
-
-    if (res.ok) {
-      document.getElementById("new-subject").value = "";
+      const user = await res.json();
+      userRole = user.role;
       fetchSubjects();
-    } else {
-      alert("Failed to add subject");
     }
-  }
 
-  async function addChapter() {
-    const title = document.getElementById("new-chapter").value.trim();
-    if (!title) return alert("Enter a chapter title");
-    if (!currentSubjectId) return alert("Select a subject first");
+    async function fetchSubjects() {
+      const res = await fetch(`${API_BASE}/subjects`, {
+        headers: { Authorization: `Bearer ${token}` }
+      });
 
-    const res = await fetch(`${API_BASE}/subjects/${currentSubjectId}/chapters`, {
-      method: "POST",
-      headers: {
-        Authorization: `Bearer ${token}`,
-        "Content-Type": "application/json"
-      },
-      body: JSON.stringify({ title })
-    });
+      const subjects = await res.json();
+      const select = document.getElementById("subject-select");
+      const subjectList = document.getElementById("subject-list");
 
-    if (res.ok) {
-      document.getElementById("new-chapter").value = "";
-      fetchChapters(currentSubjectId);
-    } else {
-      alert("Failed to add chapter");
+      select.innerHTML = '<option value="">Select a subject</option>';
+      subjectList.innerHTML = "";
+
+      subjects.forEach((subject) => {
+        const option = document.createElement("option");
+        option.value = subject.id;
+        option.textContent = subject.name;
+        select.appendChild(option);
+
+        const li = document.createElement("li");
+        li.className = "bg-gray-50 rounded p-4 space-y-2";
+        li.innerHTML = `
+          <div class="flex justify-between items-center">
+            <span class="font-semibold">${subject.name}</span>
+            <div class="space-x-2">
+              <button onclick="editSubject(${subject.id}, '${subject.name}')" class="text-yellow-600 hover:underline">Edit</button>
+              <button onclick="deleteSubject(${subject.id})" class="text-red-600 hover:underline">Delete</button>
+            </div>
+          </div>
+          <div id="chapter-section-${subject.id}" class="pl-4 space-y-2">
+            <input id="new-chapter-${subject.id}" placeholder="New Chapter Title" class="px-2 py-1 border rounded w-64" />
+            <button onclick="addChapter(${subject.id})" class="bg-green-600 text-white px-2 py-1 rounded hover:bg-green-700">Add Chapter</button>
+            <ul id="chapter-list-${subject.id}" class="space-y-1"></ul>
+          </div>
+        `;
+        subjectList.appendChild(li);
+        fetchChapters(subject.id);
+      });
     }
-  }
 
-  async function deleteChapter(id) {
-    if (!confirm("Delete this chapter?")) return;
+    async function addSubject() {
+      const name = document.getElementById("new-subject").value.trim();
+      if (!name) return alert("Enter a subject name");
 
-    const res = await fetch(`${API_BASE}/chapters/${id}`, {
-      method: "DELETE",
-      headers: { Authorization: `Bearer ${token}` }
-    });
+      const res = await fetch(`${API_BASE}/subjects`, {
+        method: "POST",
+        headers: {
+          Authorization: `Bearer ${token}`,
+          "Content-Type": "application/json"
+        },
+        body: JSON.stringify({ name })
+      });
 
-    if (res.ok) fetchChapters(currentSubjectId);
-    else alert("Failed to delete chapter");
-  }
+      if (res.ok) {
+        document.getElementById("new-subject").value = "";
+        fetchSubjects();
+      } else {
+        alert("Failed to add subject");
+      }
+    }
 
-  async function editChapter(id, currentTitle) {
-    const newTitle = prompt("Edit chapter title:", currentTitle);
-    if (!newTitle || newTitle === currentTitle) return;
+    async function editSubject(id, currentName) {
+      const newName = prompt("Edit subject name:", currentName);
+      if (!newName || newName === currentName) return;
 
-    const res = await fetch(`${API_BASE}/chapters/${id}`, {
-      method: "PATCH",
-      headers: {
-        Authorization: `Bearer ${token}`,
-        "Content-Type": "application/json"
-      },
-      body: JSON.stringify({ title: newTitle })
-    });
+      const res = await fetch(`${API_BASE}/subjects/${id}`, {
+        method: "PATCH",
+        headers: {
+          Authorization: `Bearer ${token}`,
+          "Content-Type": "application/json"
+        },
+        body: JSON.stringify({ name: newName })
+      });
 
-    if (res.ok) fetchChapters(currentSubjectId);
-    else alert("Failed to edit chapter");
-  }
+      if (res.ok) fetchSubjects();
+      else alert("Failed to edit subject");
+    }
 
-  fetchUser();
-</script>
+    async function deleteSubject(id) {
+      if (!confirm("Delete this subject?")) return;
+
+      const res = await fetch(`${API_BASE}/subjects/${id}`, {
+        method: "DELETE",
+        headers: { Authorization: `Bearer ${token}` }
+      });
+
+      if (res.ok) fetchSubjects();
+      else alert("Failed to delete subject");
+    }
+
+    async function addChapter(subjectId) {
+      const input = document.getElementById(`new-chapter-${subjectId}`);
+      const title = input.value.trim();
+      if (!title) return alert("Enter a chapter title");
+
+      const res = await fetch(`${API_BASE}/subjects/${subjectId}/chapters`, {
+        method: "POST",
+        headers: {
+          Authorization: `Bearer ${token}`,
+          "Content-Type": "application/json"
+        },
+        body: JSON.stringify({ title })
+      });
+
+      if (res.ok) {
+        input.value = "";
+        fetchChapters(subjectId);
+      } else {
+        alert("Failed to add chapter");
+      }
+    }
+
+    async function fetchChapters(subjectId) {
+      const res = await fetch(`${API_BASE}/subjects/${subjectId}/chapters`, {
+        headers: { Authorization: `Bearer ${token}` }
+      });
+
+      const chapters = await res.json();
+      const list = document.getElementById(`chapter-list-${subjectId}`);
+      list.innerHTML = "";
+
+      chapters.forEach((chapter) => {
+        const li = document.createElement("li");
+        li.className = "flex justify-between items-center bg-white px-2 py-1 rounded";
+        li.innerHTML = `
+          <span>${chapter.title}</span>
+          <div class="space-x-2">
+            <button onclick="editChapter(${chapter.id}, '${chapter.title}', ${subjectId})" class="text-yellow-600 hover:underline">Edit</button>
+            <button onclick="deleteChapter(${chapter.id}, ${subjectId})" class="text-red-600 hover:underline">Delete</button>
+          </div>
+        `;
+        list.appendChild(li);
+      });
+    }
+
+    async function editChapter(id, currentTitle, subjectId) {
+      const newTitle = prompt("Edit chapter title:", currentTitle);
+      if (!newTitle || newTitle === currentTitle) return;
+
+      const res = await fetch(`${API_BASE}/chapters/${id}`, {
+        method: "PATCH",
+        headers: {
+          Authorization: `Bearer ${token}`,
+          "Content-Type": "application/json"
+        },
+        body: JSON.stringify({ title: newTitle })
+      });
+
+      if (res.ok) fetchChapters(subjectId);
+      else alert("Failed to edit chapter");
+    }
+
+    async function deleteChapter(id, subjectId) {
+      if (!confirm("Delete this chapter?")) return;
+
+      const res = await fetch(`${API_BASE}/chapters/${id}`, {
+        method: "DELETE",
+        headers: { Authorization: `Bearer ${token}` }
+      });
+
+      if (res.ok) fetchChapters(subjectId);
+      else alert("Failed to delete chapter");
+    }
+
+    function onSubjectChange() {
+      // optional: if you want to show selected subject-specific content elsewhere
+    }
+
+    fetchUser();
+  </script>
 
 </body>
 </html>
